--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# do not pubish my private settings!
+config/messages.json
+config/aws-iot.json
+config/*.key
+config/*.pem
+config/*.crt
